--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -41,6 +41,7 @@ table
 /* Custom styles */
 html, body
     height: 100%
+    
 
 .watch_circle
   display: flex
@@ -51,13 +52,37 @@ html, body
   height: 400px
   width: 400px
 
-#watch
-    height: 100%
+#watch 
     display: flex
     justify-content: center
-    align-items: end
     font-family: Arial, Helvetica, sans-serif
     font-size: 10rem
     color: #f4d160
+
+#reloj
+  display: flex
+  justify-content: center
+  padding: 2rem
+  font-size: 7rem
+  color: #8ac4d0
+  font-family: Arial, Helvetica, sans-serif
+
+form
+  display: flex
+  justify-content: center
+  
+input
+  border-radius: 20px
+  background: transparent
+  color: gray
+  border: 5px solid #28527a
+  padding: 16px 32px
+  text-align: center
+  font-size: 16px
+  margin: 4px 2px
+
+  
+  
+
   
 
