--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,18 +64,47 @@ html, body {
 }
 
 #watch {
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 10rem;
   color: #f4d160;
+}
+
+#reloj {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 2rem;
+  font-size: 7rem;
+  color: #8ac4d0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+input {
+  border-radius: 20px;
+  background: transparent;
+  color: gray;
+  border: 5px solid #28527a;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
 }
 /*# sourceMappingURL=styles.css.map */
